--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,9 +20,12 @@ rand_chacha = "^0.2"
 rayon = "^1.2"
 num = "^0.2"
 numpy = "^0.8"
-ndarray = "^0.13"
 monte_carlo = { path = "../monte_carlo_core", version = "^0.1" }
 
 [dependencies.pyo3]
 version = "^0.9"
 features = ["extension-module"]
+
+[dependencies.ndarray]
+version = "^0.13"
+features = ["rayon"]
