--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "py_monte_carlo"
-version = "1.0.1"
+version = "1.1.0"
 authors = ["sumnernh@gmail.com <sumnernh@gmail.com>"]
 edition = "2018"
 
@@ -23,9 +23,10 @@ num = "^0.2"
 numpy = "^0.8"
 
 [dependencies.ising_monte_carlo]
-version = "^1.0"
-git = "https://github.com/Renmusxd/IsingMonteCarlo"
-features = ["autocorrelations"]
+version = "^1.2"
+#git = "https://github.com/Renmusxd/IsingMonteCarlo"
+path = "../IsingMonteCarlo"
+features = ["autocorrelations", "parallel-tempering"]
 
 [dependencies.pyo3]
 version = "^0.9"
