--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
 name = "py_monte_carlo"
-version = "1.1.0"
-authors = ["sumnernh@gmail.com <sumnernh@gmail.com>"]
+version = "1.2.0"
+authors = ["Sumner Hearth <sumnernh@gmail.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
 name = "py_monte_carlo"
@@ -17,7 +15,6 @@ codegen-units = 1
 [dependencies]
 itertools = "^0.9"
 rand = "^0.7"
-rand_chacha = "^0.2"
 rayon = "^1.2"
 num = "^0.2"
 numpy = "^0.8"
