--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "py_monte_carlo"
-version = "1.3.0"
+version = "1.3.1"
 authors = ["Sumner Hearth <sumnernh@gmail.com>"]
 edition = "2018"
 
@@ -11,6 +11,7 @@ crate-type = ["cdylib"]
 [profile.release]
 lto = "fat"
 codegen-units = 1
+panic = "abort"
 
 [dependencies]
 itertools = "^0.9"
