--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "py_monte_carlo"
-version = "1.4.0"
+version = "1.5.0"
 authors = ["Sumner Hearth <sumnernh@gmail.com>"]
 edition = "2018"
 
@@ -15,17 +15,18 @@ panic = "abort"
 
 [dependencies]
 itertools = "^0.9"
-rand = "^0.7"
+rand = {version = "^0.7", features = ["small_rng"]}
 rayon = "^1.2"
-numpy = "^0.8"
+serde_cbor = "^0.11"
+numpy = "^0.11"
 
 [dependencies.ising_monte_carlo]
-version = "^1.4"
+version = "^1.5.1"
 git = "https://github.com/Renmusxd/IsingMonteCarlo"
-features = ["autocorrelations", "parallel-tempering"]
+features = ["autocorrelations", "parallel-tempering", "serialize"]
 
 [dependencies.pyo3]
-version = "^0.9"
+version = "^0.11"
 features = ["extension-module"]
 
 [dependencies.ndarray]
