--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "py_monte_carlo"
-version = "1.6.2"
+version = "1.7.0"
 authors = ["Sumner Hearth <sumnernh@gmail.com>"]
 edition = "2018"
 
@@ -21,9 +21,9 @@ serde_cbor = "^0.11"
 numpy = "^0.11"
 
 [dependencies.ising_monte_carlo]
-version = "^1.6.2"
+version = "^1.7"
 git = "https://github.com/Renmusxd/IsingMonteCarlo"
-features = ["autocorrelations", "parallel-tempering", "serialize"]
+features = ["autocorrelations", "parallel-tempering", "serialize", "nightly"]
 
 [dependencies.pyo3]
 version = "^0.11"
