--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "py_monte_carlo"
-version = "1.7.0"
+version = "2.0.0"
 authors = ["Sumner Hearth <sumnernh@gmail.com>"]
 edition = "2018"
 
@@ -22,8 +22,7 @@ numpy = "^0.11"
 
 [dependencies.ising_monte_carlo]
 version = "^2.0"
-#git = "https://github.com/Renmusxd/IsingMonteCarlo"
-path = "../IsingMonteCarlo"
+git = "https://github.com/Renmusxd/IsingMonteCarlo"
 features = ["autocorrelations", "parallel-tempering", "serialize", "nightly"]
 
 [dependencies.pyo3]
