--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ serde_cbor = "^0.11"
 numpy = "^0.11"
 
 [dependencies.qmc]
-version = "^2.1"
+version = "2.1.3"
 features = ["autocorrelations", "parallel-tempering", "serialize", "nightly"]
 
 [dependencies.pyo3]
