--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "py_monte_carlo"
-version = "2.10.0"
+version = "2.10.1"
 authors = ["Sumner Hearth <sumnernh@gmail.com>"]
 edition = "2018"
 
@@ -16,18 +16,18 @@ panic = "abort"
 [dependencies]
 itertools = "^0.9"
 rand = {version = "^0.7", features = ["small_rng"]}
-rayon = "^1.2"
+rayon = "1.5"
 serde_cbor = "^0.11"
-numpy = "^0.11"
+numpy = "0.12"
 
 [dependencies.qmc]
-version = "^2.9"
+version = "2.10"
 features = ["autocorrelations", "parallel-tempering", "serialize", "nightly"]
 
 [dependencies.pyo3]
-version = "^0.11"
+version = "0.12"
 features = ["extension-module"]
 
 [dependencies.ndarray]
-version = "^0.13"
+version = "0.14"
 features = ["rayon"]
