--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ serde_cbor = "^0.11"
 numpy = "0.12"
 
 [dependencies.qmc]
-version = "2.10"
+version = "^2.10.2"
 features = ["autocorrelations", "parallel-tempering", "serialize", "nightly"]
 
 [dependencies.pyo3]
