--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ panic = "abort"
 [dependencies]
 itertools = "^0.10"
 rand = {version = "^0.8", features = ["small_rng"]}
-rayon = "1.5"
+rayon = "^1.5"
 serde_cbor = "^0.11"
 numpy = "^0.13"
 
