--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,10 @@ itertools = "^0.10"
 rand = {version = "^0.8", features = ["small_rng"]}
 rayon = "^1.5"
 serde_cbor = "^0.11"
-numpy = "^0.13"
+
+[dependencies.numpy]
+version = "^0.13"
+features = ["rayon"]
 
 [dependencies.qmc]
 version = "^2.16.2"
@@ -29,5 +32,5 @@ version = "^0.13"
 features = ["extension-module"]
 
 [dependencies.ndarray]
-version = "0.14"
+version = "^0.14"
 features = ["rayon"]
